<resources>
    <string name="app_name">ChitChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="welcome_to_chitchat">Welcome to ChitChat</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service">Read our <b><font color="#5DF8B9">Privacy Policy</font></b>. Tap "Agree and Continue" to \n accept the <b><font color="#5DF8B9">Terms of Service</font></b></string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="register_with_email">Register with <b><font color="#5DF8B9">Email</font></b></string>
    <string name="profile_image">Profile Image</string>
    <string name="chitchat_will_need_to_verify_your_account_whats_s_my_number">ChitChat will need to verify your account.<b><font color="#5DF8B9">What\'s my number?</font></b></string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="register_with_phone">Register with Phone</string>
    <string name="login_here_with_email">Login here with <b><font color="#5DF8B9">Email</font></b></string>
    <string name="already_registered_signin_now">Already Registered <b><font color="#5DF8B9">SignIn Now</font></b></string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="new_message">New Message</string>
    <string name="login_with_mobile_number">Login with <b><font color="#5DF8B9">Mobile Number</font></b></string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="user_name">User Name</string>
    <string name="tab_to_add_status_update">Tab to add status update</string>
    <string name="my_status">My Status</string>
    <string name="_16_june_2023">16 June 2023</string>
    <string name="chat_background">Chat Background</string>
    //Spinner Array
    <string-array name="more">
        <item>Logout</item>
        <item>Delete Account</item>
    </string-array>


    //Agora
    <string name="app_id">f50052a76a4a4b44a34939b95483637f</string>
    <string name="agora_token">7fd667e7aafa4da187c78291a43dfc20</string>
    <string name="temp_token">007eJxTYPiVxnK80zRCXNr68PFHztwT9wkZf9y4NnX906Q9q6cdXaSuwGBpYWCclphinJiYaG6SmGySaJ6YlmqUYmFmbmpmaJKYdCXoRUpDICODllkPMyMDBIL4Qgxl+ZnJqWplmSmp+c4ZiXl5qTkMDACBsSXj</string>
    <string name="channel_name">voice_channel</string>
    <string name="notification_channel_id">notification_channel</string>
    <string name="SERVER_KEY">AAAAjJqOcOM:APA91bEt-WfXlgRQC7qG00fN8Og7pcmLHJTIO_X1G9ED3Vss_EHBJtAZgSWA4yvJdLjmJGtgnf15j6G41wWaGhVfyusFwBHF0s3RzcQbGUTY5HJ1ExXMBGpSFxJvAwARedPQVW-mGMq1</string>
</resources>