<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.fragment.SplashFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/chat"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_chitchat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/termsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/termsAndConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAgreeAndContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAgreeAndContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_and_continue"
        android:background="@drawable/bg_agree_and_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@+id/termsAndConditions" />

</androidx.constraintlayout.widget.ConstraintLayout>